name:                adventofcode2017
version:             0.1.0.0
synopsis:            Solutions for http://adventofcode.com/2017
homepage:            https://github.com/purcell/adventofcode2017#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Purcell
maintainer:          steve@sanityinc.com
copyright:           2017 Steve Purcell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/purcell/adventofcode2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Day01
                     , Day02
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , parsec

executable adventofcode2017
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , adventofcode2017
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/purcell/adventofcode2017
